<resources>
    <string name="app_name">搜工作</string>
    <string name="str_login">登陆</string>
    <string name="str_reg">注册</string>
    <string name="str_please_enter_username">请输入用户名</string>
    <string name="str_please_enter_password">请输入密码</string>
    <string name="str_please_enter_uname">请输入昵称</string>
    <string name="str_please_enter_repassword">请确认密码</string>
    <string name="str_male">男</string>
    <string name="str_female">女</string>
    <string name="str_error_empty_account">账号不能为空!</string>
    <string name="str_error_empty_uname">昵称不能为空!</string>
    <string name="str_error_empty_password">密码不能为空!</string>
    <string name="str_error_empty_repassword">确认密码不能为空!</string>
    <string name="str_error_password_repassword_different">两次密码不一致!</string>
    <string name="str_please_enter_search_word">请输入搜索内容</string>
    <string name="str_message">消息</string>
    <string name="str_news">网址导航</string>
    <string name="str_contact">联系人</string>
    <string name="str_search_job">搜工作</string>
    <string name="str_add_friend">添加好友</string>
    <string name="str_friend_apply">好友申请</string>
    <string name="str_sweep">扫一扫</string>
    <string name="str_contact_head_text_1">通讯录</string>
    <string name="str_contact_head_text_2">扫一扫</string>
    <string name="str_contact_head_text_3">动态</string>
    <string name="str_contact_head_text_4">附近</string>
    <string name="str_uname">昵称</string>
    <string name="str_account">账号</string>
    <string name="str_qr_card">二维码名片</string>
    <string name="str_new_message_notice">新消息提醒</string>
    <string name="str_sound">声音</string>
    <string name="str_shake">震动</string>
    <string name="str_sex">性别</string>
    <string name="str_address">地区</string>
    <string name="str_birthday">出生日期</string>
    <string name="str_sign">个性签名</string>
    <string name="str_sign_default">这个人很懒，什么都没有留下...</string>
    <string name="str_setting">设置</string>
    <string name="str_setting_font_size">聊天字体</string>
    <string name="str_check_update">检查更新</string>
    <string name="str_scroll_sliding_to_location">滑动滑块到适当位置</string>
    <string name="str_default_uname">csi0n</string>
    <string name="str_default_level">黄金VIP</string>
    <string name="str_person_center_address_manage">地址管理</string>
    <string name="str_person_center_following_enterprise">关注的企业</string>
    <string name="str_person_center_following_commodity">关注的商品</string>
    <string name="str_person_center_following_shop">关注的店铺</string>
    <string name="str_person_center_browse_history">浏览历史</string>
    <string name="str_account_balance">账户余额</string>
    <string name="str_search_job_balance">搜工作余额宝</string>
    <string name="str_raise_earnings">众筹收益</string>
    <string name="str_raise_po">众筹宝</string>
    <string name="str_my_wallet">我的钱包</string>
    <string name="str_my_order">我的订单</string>
    <string name="str_look_all_order">查看所有订单</string>
    <string name="str_wait_pay_money">待付款</string>
    <string name="str_wait_receive">待收货</string>
    <string name="str_wait_apprise">待评价</string>
    <string name="str_repair">返修/退换</string>
    <string name="str_default_int">0</string>
    <string name="str_default_float">0.00</string>
    <string name="str_my_biography">我的简历</string>
    <string name="str_setting_and_feed">设置与反馈</string>
    <string name="str_setting_and_feed_move_here">意见反馈搬到这了</string>
    <string name="str_person_info">个人信息</string>
    <string name="str_normal_setting">常用设置</string>
    <string name="str_friend_dynamic_setting">好友动态设置</string>
    <string name="str_at_about_me">\@与我相关</string>
    <string name="str_qun">群设置</string>
    <string name="community_setting">社区设置</string>
    <string name="contact_setting">联系人设置</string>
    <string name="privacy_setting">隐私设置</string>
    <string name="search_job_setting">搜工作设置</string>
    <string name="str_frag_find_job_text_1">企业返现|企业直招</string>
    <string name="str_frag_find_job_text_2">全职|兼职</string>
    <string name="str_frag_find_job_text_3">社区服务</string>
    <string name="str_frag_find_job_text_4">二手市场</string>
    <string name="str_frag_find_job_text_5">夜生活</string>
    <string name="str_frag_find_job_text_6">外卖|社区快递</string>
    <string name="str_frag_find_job_text_7">房产|出租屋</string>
    <string name="str_default_location">无锡</string>
    <string name="str_choose_location">选择位置</string>
    <string name="str_logout">注销</string>
    <string name="str_qr_code_scan">二维码扫描</string>
    <string name="str_search_user">搜索用户</string>
    <string name="str_nearby_person">附近的人</string>
    <string name="str_add_friend_list">好友申请</string>
    <string name="str_my_qun">我的群</string>
    <string name="str_person_center">个人中心</string>
    <string name="str_user_info">用户信息</string>
    <string name="str_can_not_find_version_name">没有发现版本号</string>
    <string name="str_my_dynamic">我的动态</string>
    <string name="str_friend_dynamic">好友动态</string>
    <string name="voice_length">10"</string>
    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="second">秒</string>
    <string name="send">发送</string>
    <string name="type_picture">[图片]</string>
    <string name="type_voice">[语音]</string>
    <string name="type_location">[位置]</string>
    <string name="group_notification">[群成员变动]</string>
    <string name="server_803008">消息已发出，但被对方拒收了。</string>
    <string name="type_custom">[自定义消息]</string>
    <string name="load_origin_image">查看原图</string>
    <string name="origin_picture">原图</string>
    <string name="choose">选择</string>
    <string name="local_picture_not_found_toast">本地没有发现图片!</string>
    <string name="picture_num_limit_toast">你最多只能同时发送9张图片</string>
    <string name="sending_hint">正在发送</string>
    <string name="downloading_hint">正在下载</string>
    <string name="str_complete">完成</string>
    <string name="download_completed_toast">下载完成</string>
    <string name="file_not_found_toast">没有发现文件!</string>
    <string name="attach_picture">相册</string>
    <string name="attach_take_pic">相机</string>
    <string name="Send_the_following_pictures">发送以下图片?</string>
    <string name="group">群聊</string>
    <string name="move_up_to_cancel">向上滑动取消发送!</string>
    <string name="sdcard_not_exist_toast">SD卡不存在!</string>
    <string name="sdcard_not_prepare_toast">SD卡没有准备好!</string>
    <string name="choose_album_title">选择相册</string>
    <string name="loading">读取中...</string>
    <string name="please_wait">请等待...</string>
    <string name="jmessage_test_usernmae">csi0n</string>
    <string name="jmessage_test_password">123123123</string>
    <string name="str_change_remark">修改备注</string>
    <string name="str_change">修改</string>
    <string name="str_change_group_list">修改用户分组</string>
    <string name="str_dynamic_detail">动态详情</string>
    <string name="str_write_dynamic">写动态</string>
    <string name="str_download_success">下载完成</string>
    <string name="str_download_failed">下载失败</string>
    <string name="no_data">没有找到符合的数据</string>
    <string name="str_thread_busy_please_wait_last_task_complete">当前任务繁忙,请等待上一个任务完成!</string>
    <string name="url_checkUpdate">api.php/User/Oauth/checkUpdate</string>
    <string name="url_Authorize">api.php/User/Oauth/authorize</string>
    <string name="url_checkTimeOut">api.php/User/Oauth/checkTimeOut</string>
    <string name="url_getGroups">api.php/User/Index/getGroups</string>
    <string name="url_getFriends">api.php/User/Index/getFriends</string>
    <string name="url_getUserByLike">api.php/User/Index/getUserByLike</string>
    <string name="url_show">api.php/User/Index/show</string>
    <string name="url_addFriend">api.php/User/Index/addFriend</string>
    <string name="url_handleFriendApply">api.php/User/Index/handleFriendApply</string>
    <string name="url_changeRemark">api.php/User/Index/changeRemark</string>
    <string name="url_addGroup">api.php/User/Index/addGroup</string>
    <string name="url_changeGroup">api.php/User/Index/changeGroup</string>
    <string name="url_verifyQR">api.php/User/Index/verifyQR</string>
    <string name="url_getAddFriendList">api.php/User/Index/getAddFriendList</string>
    <string name="url_getMessageListRemark">api.php/User/Index/getMessageListRemark</string>
    <string name="url_getCity">api.php/User/Index/getCity</string>
    <string name="url_getSearchJobList">api.php/User/Index/getSearchJobList</string>
    <string name="url_getDefaultSearchJobFragmentConfig">api.php/User/Index/getDefaultSearchJobFragmentConfig</string>
    <string name="url_getSearchJobDetail">api.php/User/Index/getSearchJobDetail</string>
    <string name="url_getSearchJobDetailBHeader">api.php/User/Index/getSearchJobDetailBHeader</string>
    <string name="url_getSearchJobDetailB">api.php/User/Index/getSearchJobDetailB</string>
    <string name="url_getSearchJobDetailC">api.php/User/Index/getSearchJobDetailC</string>
    <string name="url_getSearchJobDetailD">api.php/User/Index/getSearchJobDetailD</string>
    <string name="url_followJinglirenOption">api.php/User/Index/followJinglirenOption</string>
    <string name="url_getSearchJobListByKey">api.php/User/Index/getSearchJobListByKey</string>
    <string name="url_requestIDCode">api.php/User/JinLiRen/requestIDCode</string>
    <string name="url_saveIDCode">api.php/User/JinLiRen/saveIDCode</string>
</resources>
